--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -1,9 +1,11 @@
 {% extends "adminlte2/base.html" %}
 
 {% block title %}
+{{ project.name }}
 {% endblock title %}
 
 {% block page_name %}
+{{ project.name }}
 {% endblock page_name %}
 
 {% block page_description %}
@@ -11,9 +13,77 @@
 
 {% block breadcrumbs %}
 <ol class="breadcrumb">
-    <li><i class="fa fa-dashboard"></i></li>
+    <li>
+        <a href="{% url 'project_list' %}">
+            <i class="fa fa-dashboard"></i> Home
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'project_list' %}">
+            <i class="fa fa-archive"></i> Projects
+        </a>
+    </li>
+    <li class="active">{{ project.name }}</li>
 </ol>
 {% endblock breadcrumbs %}
 
 {% block content %}
+<div clas="row">
+    <div class="col-md-12">
+        <a href="{% url 'project_detail_closed' project.pk %}" class="btn btn-purple">
+            <i class="fa fa-ticket"></i> View Closed Tickets
+        </a>
+        <a href="{% url 'ticket_create' project.pk %}" class="btn btn-success pull-right">
+            <i class="fa fa-plus"></i> New Ticket
+        </a>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<!-- Expedite Priority Tickets -->
+<div class="box box-solid box-danger">
+    <div class="box-header with-border">
+        <h3 class="box-title">High Priority Tickets</h3>
+    </div>
+    <div class="box-body">
+        {% include 'partials/_ticket_table.html' with tickets=project.expedite_priority_tickets %}
+    </div>
+</div>
+<!-- High Priority Tickets -->
+<div class="box box-solid box-warning">
+    <div class="box-header with-border">
+        <h3 class="box-title">High Priority Tickets</h3>
+    </div>
+    <div class="box-body">
+        {% include 'partials/_ticket_table.html' with tickets=project.high_priority_tickets %}
+    </div>
+</div>
+<!-- Medium Priority Tickets -->
+<div class="box box-solid box-success">
+    <div class="box-header with-border">
+        <h3 class="box-title">Medium Priority Tickets</h3>
+    </div>
+    <div class="box-body">
+        {% include 'partials/_ticket_table.html' with tickets=project.medium_priority_tickets %}
+    </div>
+</div>
+<!-- Low Priority Tickets -->
+<div class="box box-solid box-primary">
+    <div class="box-header with-border">
+        <h3 class="box-title">Low Priority Tickets</h3>
+    </div>
+    <div class="box-body">
+        {% include 'partials/_ticket_table.html' with tickets=project.low_priority_tickets %}
+    </div>
+</div>
+<!-- No Priority Tickets -->
+<div class="box box-solid box-info">
+    <div class="box-header with-border">
+        <h3 class="box-title">No Priority Tickets</h3>
+    </div>
+    <div class="box-body">
+        {% include 'partials/_ticket_table.html' with tickets=project.no_priority_tickets %}
+    </div>
+</div>
 {% endblock content %}
