--- a/templates/project_detail_closed.html
+++ b/templates/project_detail_closed.html
@@ -1,9 +1,11 @@
 {% extends "adminlte2/base.html" %}
 
 {% block title %}
+{{ project.name }}
 {% endblock title %}
 
 {% block page_name %}
+{{ project.name }}
 {% endblock page_name %}
 
 {% block page_description %}
@@ -11,9 +13,38 @@
 
 {% block breadcrumbs %}
 <ol class="breadcrumb">
-    <li><i class="fa fa-dashboard"></i></li>
+    <li>
+        <a href="{% url 'project_list' %}">
+            <i class="fa fa-dashboard"></i> Home
+        </a>
+    </li>
+    <li>
+        <a href="{% url 'project_list' %}">
+            <i class="fa fa-archive"></i> Projects
+        </a>
+    </li>
+    <li class="active">{{ project.name }}</li>
 </ol>
 {% endblock breadcrumbs %}
 
 {% block content %}
+<div clas="row">
+    <div class="col-md-12">
+        <a href="{% url 'project_detail' project.pk %}" class="btn btn-primary">
+            <i class="fa fa-ticket"></i> View Open Tickets
+        </a>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<!-- Closed Tickets -->
+<div class="box box-solid box-purple">
+    <div class="box-header with-border">
+        <h3 class="box-title">Closed Tickets</h3>
+    </div>
+    <div class="box-body">
+        {% include 'partials/_ticket_table.html' with tickets=project.closed_tickets %}
+    </div>
+</div>
 {% endblock content %}
